added lifes counter

--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
         <div id="canvasContainer" class="juego"></div>
         <div class="puntos">
             <table class="score">
-                <thead>
-                    <tr><th>Enemies left:</th></tr>
-                </thead>
                 <tbody>
-                    <tr><td id="enemies"></td></tr>
+                    <tr><th>Enemies left:</th><td id="enemies"></td></tr>
+                    <tr><th>Lifes left:</th><td id="lifes"></td></tr>
                 </tbody>
             </table>
         </div>
